plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '4.0.4'
}

mainClassName = 'com.github.gpluscb.toni.Bot'

version '1.1.13'

sourceCompatibility = 17

repositories {
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
    mavenCentral()
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
    maven { url 'https://jitpack.io' }

    // For JDA-Chewtils
    maven { url "https://m2.chew.pro/snapshots" }
}

dependencies {
    implementation(group: 'net.dv8tion', name: 'JDA', version: '5.0.0-alpha.9') {
        exclude module: 'opus-java'
    }
    implementation 'pw.chew:jda-chewtils:2.0-SNAPSHOT'

    implementation group: 'com.github.gpluscb', name: 'gg-java', version: '1.0.2'

    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'

    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.8'

    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.17.1'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'

    implementation group: 'org.graalvm.js', name: 'js', version: '21.2.0'
    implementation group: 'org.graalvm.js', name: 'js-scriptengine', version: '21.2.0'

    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
    implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.9.0'

    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.36.0.3'

    implementation group: 'com.github.gpluscb', name: 'ChallongeListener', version: '1.0.0-SNAPSHOT'

    implementation group: 'at.stefangeyer.challonge.serializer', name: 'gson', version: '2.1.0'
    implementation group: 'at.stefangeyer.challonge.rest', name: 'retrofit', version: '2.1.0'
}

compileJava.options.encoding = 'UTF-8'
